add support for promotions
