# app/serializers/invoice_option_serializer.rb
@@ -9,6 +9,7 @@ class InvoiceOptionSerializer < ApplicationSerializer
              :disabled,
              :discount_id,
              :operation,
+             :is_promotion
 
   def amount
     object.amount.truncate.to_s + '.' + sprintf('%02d', (BigDecimal(object.amount.to_s).frac * 100).truncate)
